<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            style="@style/CapitalCityTextView"
            android:text="Capital City" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/paris"
            style="@style/CapitalCityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paris" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />



        <TextView
            android:id="@+id/ottawa"
            style="@style/CapitalCityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ott" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/riga"
            style="@style/CapitalCityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/riga" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/cairo"
            style="@style/CapitalCityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cairo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/london"
            style="@style/CapitalCityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/london" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/kuala"
            style="@style/CapitalCityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kuala" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/lima"
            style="@style/CapitalCityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lima" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/lagos"
            style="@style/CapitalCityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lagos" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/warsaw"
            style="@style/CapitalCityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warsaw" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/auckland"
            style="@style/CapitalCityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auck" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/canberra"
            style="@style/CapitalCityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/canberra" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/pretoria"
            style="@style/CapitalCityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pretoria"/>

    </LinearLayout>

</ScrollView>